# AI-pull-request-description-generator

./: .gitignore  README.md  pyproject.toml
input/: diff.txt
output/: PR_DESCRIPTION.md  PR_DESCRPTION.md
src/: main.py
